2005-11-18  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlfilesource.c: (gnl_filesource_class_init),
	(pad_blocked_cb), (gnl_filesource_prepare):
	Better behaviour as standalone element
	* gnl/gnlobject.c: (translate_incoming_seek):
	Added debug

2005-11-04  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_sync_handler),
	(get_stack_list), (send_initial_seek),
	(gnl_composition_change_state), (compare_relink_stack),
	(update_pipeline), (object_start_changed), (object_stop_changed),
	(object_priority_changed), (object_active_changed),
	(gnl_composition_add_object), (gnl_composition_remove_object):
	Fixed problem in stack traversal
	Better State-Lock handling of elements
	
	* gnl/gnlfilesource.c: (ghost_seek_pad):
	* gnl/gnlobject.c: (gnl_object_init), (internalpad_event_function),
	(flush_hack_check), (ghostpad_event_function),
	(control_internal_pad), (gnl_object_ghost_pad_full),
	(gnl_object_ghost_pad):
	* gnl/gnlobject.h:
	Added fields for segment seeking at the base GnlObject class level
	Added hack for a flushing seek issue, we get deadlocks otherwise

2005-11-03  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_put_sync_handler),
	(gnl_composition_init), (gnl_composition_dispose),
	(gnl_composition_sync_handler),
	(gnl_composition_ghost_pad_set_target), (get_stack_list),
	(update_start_stop_duration), (compare_relink_stack):
	Override bin sync-bus, first step to rebuilding pipeline after
	segment-done
	
	* gnl/gnlfilesource.c: (ghost_seek_pad), (pad_blocked_cb),
	(decodebin_new_pad_cb), (gnl_filesource_init):
	Use 'new-pad' signal from decodebin instead of 'no-more-pads'

	* gnl/gnlobject.c: (gnl_object_put_sync_handler),
	(gnl_object_init), (translate_incoming_seek),
	(translate_outgoing_newsegment), (translate_message_segment_start),
	(translate_message_segment_done), (gnl_object_sync_handler),
	(update_values):
	* gnl/gnlobject.h: